--- a/index.ipynb
+++ b/index.ipynb
@@ -178,21 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def select_even(elements):\n",
     "    selected = []\n",
     "    for element in elements:\n",
-    "        if is_even(number):\n",
+    "        if is_even(element):\n",
     "            selected.append(element)\n",
     "    return selected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "[0, 2, 4, 6, 8, 10]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
