--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -330,10 +330,10 @@
     {
      "data": {
       "text/plain": [
-       "<filter at 0x10642fda0>"
+       "<filter at 0x7fb1ec1e2550>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
